env/dev/node-selector-patch.yaml
#### Change what type of node each deployment should be deployed to

#### KARPENTER SPOT INSTANCES - EPHEMERAL, STATE NOT REQUIRED

# Celery
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: celery-scalable
  name:  celery-scalable
  namespace: notification-canada-ca
spec:
  template:
    spec:
      nodeSelector:
        karpenter.sh/capacity-type: spot    

---
# Celery SMS Send
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: celery-sms-send-scalable
  name:  celery-sms-send-scalable
  namespace: notification-canada-ca
spec:
  template:
    spec:
      nodeSelector:
        karpenter.sh/capacity-type: spot    
   
---
# Celery Email Send
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: celery-email-send-scalable
  name:  celery-email-send-scalable
  namespace: notification-canada-ca
spec:
  template:
    spec:
      nodeSelector:
        karpenter.sh/capacity-type: spot    


---
# Notification API K8s
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api
  name:  api
  namespace: notification-canada-ca
spec:
  template:
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 90
            preference:
              matchExpressions:
              - key: eks.amazonaws.com/capacityType
                operator: In
                values:
                - ON_DEMAND
          - weight: 10
            preference:
              matchExpressions:
              - key: karpenter.sh/capacity-type
                operator: In
                values:
                - spot    
---
### ON DEMAND (PRIMARY) NODES - ALWAYS AVAILABLE

# Celery
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: celery-primary
  name:  celery-primary
  namespace: notification-canada-ca
spec:
  template:
    spec:
      nodeSelector:
        eks.amazonaws.com/capacityType: ON_DEMAND    

---
# Celery SMS Send
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: celery-sms-send-primary
  name:  celery-sms-send-primary
  namespace: notification-canada-ca
spec:
  template:
    spec:
      nodeSelector:
        eks.amazonaws.com/capacityType: ON_DEMAND    
   
---
# Celery Email Send
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: celery-email-send-primary
  name:  celery-email-send-primary
  namespace: notification-canada-ca
spec:
  template:
    spec:
      nodeSelector:
        eks.amazonaws.com/capacityType: ON_DEMAND    

---

# Celery Beat
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: celery-beat
  name:  celery-beat
  namespace: notification-canada-ca
spec:
  template:
    spec:
      nodeSelector:
        eks.amazonaws.com/capacityType: ON_DEMAND    
---
# Celery SMS
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: celery-sms
    profile: fargate
  name:  celery-sms
  namespace: notification-canada-ca
spec:
  template:
    spec:
      nodeSelector:
        eks.amazonaws.com/capacityType: ON_DEMAND
---
# Notify Admin
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: admin
  name:  admin
  namespace: notification-canada-ca
spec:
  template:
    spec:
      nodeSelector:
        eks.amazonaws.com/capacityType: ON_DEMAND
---
# Document Download API
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: document-download-api
  name: document-download-api
  namespace: notification-canada-ca
spec:
  template:
    spec:
      nodeSelector:
        eks.amazonaws.com/capacityType: ON_DEMAND    
---
# Documentation
apiVersion: apps/v1
kind: Deployment
metadata:
  name: documentation
  namespace: notification-canada-ca
  labels:
    app: documentation
spec:
  template:
    spec:
      nodeSelector:
        eks.amazonaws.com/capacityType: ON_DEMAND
