env/dev/remove-celery-init-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-primary
  namespace: notification-canada-ca
spec:
  template:
    spec:
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-scalable
  namespace: notification-canada-ca
spec:
  template:
    spec:
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-email-send-primary
  namespace: notification-canada-ca
spec:
  template:
    spec:
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-email-send-scalable
  namespace: notification-canada-ca
spec:
  template:
    spec:
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-sms-send-primary
  namespace: notification-canada-ca
spec:
  template:
    spec:
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-sms-send-scalable
  namespace: notification-canada-ca
spec:
  template:
    spec:
